--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,21 @@ body {
     display: block !important;
 }
 
+.intro {
+    position: relative;
+}
+
+.intro-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.7); /* Fond semi-transparent */
+    padding: 20px;
+    border-radius: 10px;
+}
+
 .intro h1 {
     font-size: 36px;
     margin: 20px 0;
